# 42-PYTHON_MODULES

./: README.md
00/: README.md
00/ex0/: ft_hello_garden.py
00/ex1/: ft_garden_name.py
00/ex2/: ft_plot_area.py
00/ex3/: ft_harvest_total.py
00/ex4/: ft_plant_age.py
00/ex5/: ft_water_reminder.py
00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
00/ex7/: ft_seed_inventory.py
01/: README.md
01/ex0/: ft_garden_intro.py
01/ex1/: ft_garden_data.py
01/ex2/: ft_plant_growth.py
01/ex3/: ft_plant_factory.py
01/ex4/: ft_garden_security.py
01/ex5/: ft_plant_types.py
01/ex6/: ft_garden_analytics.py
02/: README.md
02/ex0/: ft_first_exception.py
02/ex1/: ft_raise_exception.py
02/ex2/: ft_different_errors.py
02/ex3/: ft_custom_errors.py
02/ex4/: ft_finally_block.py
03/: README.md
03/ex0/: ft_command_quest.py
03/ex1/: ft_score_analytics.py
03/ex2/: ft_coodinate_system.py
03/ex3/: ft_achievement_tracker.py
03/ex4/: ft_inventory_system.py
03/ex5/: ft_data_stream.py
03/ex6/: ft_data_alchemist.py
04/: README.md  tester_mod04.sh
05/: README.md
06/: README.md  elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py  tester_codex.sh
07/: README.md  battle.py  capacitor.py  tournament.py
08/: README.md
08/ex1/: loading.py  pyproject.toml  requirements.txt
09/: README.md
10/: README.md  tester_mod10.sh
(+40 files in other folders)
