[project]
name = "bajuras"
version = "0.1.0"
description = "pteras"
authors = [
    {name = "mide-fre"}
]
license = "free"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "requests"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
